--- a/timajo_finals_assignment_1.ipynb
+++ b/timajo_finals_assignment_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "[768 rows x 9 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,11 +262,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset2 = dataset.values"
+    "dataset = dataset.values"
    ]
   },
   {
@@ -278,12 +278,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = dataset2[:,0:8]\n",
-    "y = dataset2[:,8]"
+    "X = dataset[:,0:8]\n",
+    "y = dataset[:,8]"
    ]
   },
   {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,16 +336,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1ff24cc71f0>"
+       "<keras.callbacks.History at 0x1ff270411f0>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,15 +363,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24/24 [==============================] - 0s 520us/step - loss: 0.5183 - accuracy: 0.7422\n",
-      "Accuracy: 74.22 \n",
+      "24/24 [==============================] - 1s 650us/step - loss: 0.5164 - accuracy: 0.7552\n",
+      "Accuracy: 75.52 \n",
       "Loss: 0.52 \n"
      ]
     }
