--- a/timajo_finals_assignment_2.ipynb
+++ b/timajo_finals_assignment_2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "[5 rows x 784 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -594,17 +594,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
-    "import itertools\n",
     "\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
     "from tensorflow.keras.layers import Flatten, Conv2D, MaxPool2D\n",
-    "from tensorflow.keras.optimizers import RMSprop,Adam"
+    "from tensorflow.keras.optimizers import Adam"
    ]
   },
   {
@@ -616,45 +615,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_5\"\n",
+      "Model: \"sequential_6\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_15 (Conv2D)          (None, 28, 28, 8)         400       \n",
+      " conv2d_18 (Conv2D)          (None, 28, 28, 8)         400       \n",
       "                                                                 \n",
-      " max_pooling2d_15 (MaxPoolin  (None, 14, 14, 8)        0         \n",
+      " max_pooling2d_18 (MaxPoolin  (None, 14, 14, 8)        0         \n",
       " g2D)                                                            \n",
       "                                                                 \n",
-      " dropout_20 (Dropout)        (None, 14, 14, 8)         0         \n",
+      " dropout_24 (Dropout)        (None, 14, 14, 8)         0         \n",
       "                                                                 \n",
-      " conv2d_16 (Conv2D)          (None, 14, 14, 16)        3216      \n",
+      " conv2d_19 (Conv2D)          (None, 14, 14, 16)        3216      \n",
       "                                                                 \n",
-      " max_pooling2d_16 (MaxPoolin  (None, 7, 7, 16)         0         \n",
+      " max_pooling2d_19 (MaxPoolin  (None, 7, 7, 16)         0         \n",
       " g2D)                                                            \n",
       "                                                                 \n",
-      " dropout_21 (Dropout)        (None, 7, 7, 16)          0         \n",
+      " dropout_25 (Dropout)        (None, 7, 7, 16)          0         \n",
       "                                                                 \n",
-      " conv2d_17 (Conv2D)          (None, 7, 7, 8)           1160      \n",
+      " conv2d_20 (Conv2D)          (None, 7, 7, 8)           1160      \n",
       "                                                                 \n",
-      " max_pooling2d_17 (MaxPoolin  (None, 3, 3, 8)          0         \n",
+      " max_pooling2d_20 (MaxPoolin  (None, 3, 3, 8)          0         \n",
       " g2D)                                                            \n",
       "                                                                 \n",
-      " dropout_22 (Dropout)        (None, 3, 3, 8)           0         \n",
+      " dropout_26 (Dropout)        (None, 3, 3, 8)           0         \n",
       "                                                                 \n",
-      " flatten_5 (Flatten)         (None, 72)                0         \n",
+      " flatten_6 (Flatten)         (None, 72)                0         \n",
       "                                                                 \n",
-      " dense_10 (Dense)            (None, 256)               18688     \n",
+      " dense_12 (Dense)            (None, 256)               18688     \n",
       "                                                                 \n",
-      " dropout_23 (Dropout)        (None, 256)               0         \n",
+      " dropout_27 (Dropout)        (None, 256)               0         \n",
       "                                                                 \n",
-      " dense_11 (Dense)            (None, 10)                2570      \n",
+      " dense_13 (Dense)            (None, 10)                2570      \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 26,034\n",
@@ -701,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -776,35 +775,17 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "378/378 [==============================] - 14s 36ms/step - loss: 1.1746 - accuracy: 0.5861 - val_loss: 0.2641 - val_accuracy: 0.9250\n",
+      "378/378 [==============================] - 14s 36ms/step - loss: 1.1354 - accuracy: 0.6068 - val_loss: 0.2448 - val_accuracy: 0.9388\n",
       "Epoch 2/15\n",
-      "378/378 [==============================] - 13s 34ms/step - loss: 0.5245 - accuracy: 0.8317 - val_loss: 0.1786 - val_accuracy: 0.9533\n",
+      "378/378 [==============================] - 13s 35ms/step - loss: 0.5053 - accuracy: 0.8392 - val_loss: 0.1646 - val_accuracy: 0.9531\n",
       "Epoch 3/15\n",
-      "378/378 [==============================] - 17s 44ms/step - loss: 0.3950 - accuracy: 0.8784 - val_loss: 0.1392 - val_accuracy: 0.9593\n",
+      "378/378 [==============================] - 14s 36ms/step - loss: 0.4024 - accuracy: 0.8752 - val_loss: 0.1348 - val_accuracy: 0.9610\n",
       "Epoch 4/15\n",
-      "378/378 [==============================] - 18s 47ms/step - loss: 0.3372 - accuracy: 0.8960 - val_loss: 0.1113 - val_accuracy: 0.9690\n",
+      "378/378 [==============================] - 14s 37ms/step - loss: 0.3364 - accuracy: 0.8953 - val_loss: 0.1113 - val_accuracy: 0.9662\n",
       "Epoch 5/15\n",
-      "378/378 [==============================] - 17s 44ms/step - loss: 0.3020 - accuracy: 0.9080 - val_loss: 0.1020 - val_accuracy: 0.9712\n",
+      "378/378 [==============================] - 13s 33ms/step - loss: 0.2983 - accuracy: 0.9062 - val_loss: 0.1135 - val_accuracy: 0.9667\n",
       "Epoch 6/15\n",
-      "378/378 [==============================] - 17s 45ms/step - loss: 0.2687 - accuracy: 0.9170 - val_loss: 0.0870 - val_accuracy: 0.9748\n",
-      "Epoch 7/15\n",
-      "378/378 [==============================] - 18s 47ms/step - loss: 0.2497 - accuracy: 0.9216 - val_loss: 0.0812 - val_accuracy: 0.9774\n",
-      "Epoch 8/15\n",
-      "378/378 [==============================] - 17s 46ms/step - loss: 0.2392 - accuracy: 0.9259 - val_loss: 0.0758 - val_accuracy: 0.9774\n",
-      "Epoch 9/15\n",
-      "378/378 [==============================] - 15s 40ms/step - loss: 0.2288 - accuracy: 0.9306 - val_loss: 0.0780 - val_accuracy: 0.9781\n",
-      "Epoch 10/15\n",
-      "378/378 [==============================] - 13s 34ms/step - loss: 0.2153 - accuracy: 0.9335 - val_loss: 0.0660 - val_accuracy: 0.9783\n",
-      "Epoch 11/15\n",
-      "378/378 [==============================] - 14s 38ms/step - loss: 0.2071 - accuracy: 0.9360 - val_loss: 0.0615 - val_accuracy: 0.9819\n",
-      "Epoch 12/15\n",
-      "378/378 [==============================] - 19s 51ms/step - loss: 0.2023 - accuracy: 0.9385 - val_loss: 0.0607 - val_accuracy: 0.9829\n",
-      "Epoch 13/15\n",
-      "378/378 [==============================] - 19s 51ms/step - loss: 0.1994 - accuracy: 0.9402 - val_loss: 0.0689 - val_accuracy: 0.9795\n",
-      "Epoch 14/15\n",
-      "378/378 [==============================] - 19s 51ms/step - loss: 0.1910 - accuracy: 0.9419 - val_loss: 0.0591 - val_accuracy: 0.9817\n",
-      "Epoch 15/15\n",
-      "378/378 [==============================] - 18s 48ms/step - loss: 0.1825 - accuracy: 0.9439 - val_loss: 0.0581 - val_accuracy: 0.9819\n"
+      "352/378 [==========================>...] - ETA: 0s - loss: 0.2722 - accuracy: 0.9159"
      ]
     }
    ],
@@ -824,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +899,7 @@
     "f,ax = plt.subplots(figsize=(8, 8))\n",
     "\n",
     "sns.heatmap(conf_matrix, annot=True, linewidths=0.01,\n",
-    "            cmap=\"Greens\",linecolor=\"gray\", fmt= '.1f',ax=ax)\n",
+    "            cmap=\"Blues\",linecolor=\"gray\", fmt= '.1f',ax=ax)\n",
     "plt.xlabel(\"Predicted Label\")\n",
     "plt.ylabel(\"True Label\")\n",
     "plt.title(\"Confusion Matrix\")\n",
