--- a/timajo_finals_assignment_1.ipynb
+++ b/timajo_finals_assignment_1.ipynb
@@ -248,7 +248,8 @@
    ],
    "source": [
     "file_name = './pima-indians-diabetes.csv'\n",
-    "column_names = ['num_times_pregnant', 'plasma_glucose_concentration', 'diastolic_blood_pressure', 'triceps_skin_fold_thickness', 'two_hour_serum', 'body_mass_index', 'diabetes_pedigree_function', 'age', 'class']\n",
+    "column_names = ['num_times_pregnant', 'plasma_glucose_concentration', 'diastolic_blood_pressure', 'triceps_skin_fold_thickness', 'two_hour_serum', \n",
+    "'body_mass_index', 'diabetes_pedigree_function', 'age', 'class']\n",
     "dataset = pd.read_csv(file_name, index_col=False, names=column_names)\n",
     "dataset"
    ]
@@ -331,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fit model"
+    "## Fit X and Y"
    ]
   },
   {
